# MediaGuardAppV31

./: .gitignore  DVR開發相關的說明VER3.1_2024-11-17.doc  README.md  項目開始日期2024-11-15.txt
DEVELOP_LOG/: CUDA_FFmpeg運算.MD  (+14 more)
MediaGuardApp_Dev/: .gitignore  CMakeLists.txt  CMakeSettings.json
MediaGuardApp_Dev/MediaGuard/: CMakeLists - 2024-12-22_OK.txt  CMakeLists - 2024-12-7_boost NOT OK.txt  CMakeLists - boost設置.txt  CMakeLists - old2_2024-12-5.txt  CMakeLists - old_ffmpeg_cmake.txt  CMakeLists -2024-12-6- OK.txt  CMakeLists.txt  runexecutable.sh
MediaGuardApp_Dev/MediaGuard/src/: CarPlate.cpp  CarPlate.h  Common.h  File.h  ManagerController.cpp  ManagerController.h  RtspStreamHandle.cpp  RtspStreamHandle.h  StreamDefine.h  StreamHandle.h  StreamManager.cpp  StreamManager.h  Time.h  main.cpp
MediaGuardApp_Dev/MediaGuard/src/httpserver/: comm.cpp  comm.h  httpserver.cc  httpserver.h
MediaGuardApp_Dev/MediaGuard/src/include/Basic/: RaiiHelper.h  ThreadPool.h
MediaGuardApp_Dev/MediaGuard/src/include/Common/: CrossPlat.h  CvMatToBase64.h
MediaGuardApp_Dev/MediaGuard/src/include/Config/: ConfigFile.h  DeviceConfig.cpp  DeviceConfig.h
MediaGuardApp_Dev/MediaGuard/src/include/ErrorInfo/: ErrorCode.h  ErrorMessage.cpp
MediaGuardApp_Dev/MediaGuard/src/interface/: CameraMpeg.cpp  CameraMpeg.h  DeviceInfo.cpp  ResponseDefine.h
MediaGuardApp_Dev/MediaGuard/src/stun/: NatHeartBean.cpp  NatHeartBean.h
MediaGuardApp_Dev/MediaGuard/src/web/: index_template.html
MediaGuardApp_Dev/Output/conf/: camera_schedule_8.json  device.json
MediaGuardApp_Dev/Output/web/: index.html
(+44 files in other folders)
